CMake: generate less XCode schemas

--- a/apps/inviwo/CMakeLists.txt
+++ b/apps/inviwo/CMakeLists.txt
@@ -72,6 +72,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
         MACOSX_BUNDLE_BUNDLE_VERSION "${IVW_VERSION}"
         MACOSX_BUNDLE_COPYRIGHT "C) 2012-${YEAR} Inviwo Foundation"
         XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "org.inviwo.Inviwo"
+        XCODE_GENERATE_SCHEME YES
     )
 
     set(CPACK_BINARY_DRAGNDROP ON)
