--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,27 +56,23 @@ project(${IVW_CFG_PROJECT_NAME}
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
-# verify that git submodules have been cloned
-if(NOT DEFINED VCPKG_INSTALLED_DIR)
-    include(cmake/verifysubmodules.cmake)
-    verify_submodules("${CMAKE_CURRENT_LIST_DIR}/.gitmodules")
-endif()
+enable_testing()
 
 option(IVW_CFG_USE_CCACHE_MSVC "build using cache on windows" OFF)
 if(IVW_CFG_USE_CCACHE_MSVC)
-  # By default Visual Studio generators will use /Zi which is not compatible
-  # with ccache, so tell Visual Studio to use /Z7 instead.
-  message(STATUS "Setting MSVC debug information format to 'Embedded'")
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<$<CONFIG:Debug,RelWithDebInfo>:Embedded>")
+    # By default Visual Studio generators will use /Zi which is not compatible
+    # with ccache, so tell Visual Studio to use /Z7 instead.
+    message(STATUS "Setting MSVC debug information format to 'Embedded'")
+    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<$<CONFIG:Debug,RelWithDebInfo>:Embedded>")
 
-  # this expects a copy of ccache.exe to be in CMAKE_BINARY_DIR renamed to cl.exe
-  set(CMAKE_VS_GLOBALS
-    "CLToolExe=cl.exe"
-    "CLToolPath=${CMAKE_BINARY_DIR}"
-    "TrackFileAccess=false"
-    "UseMultiToolTask=true"
-    "DebugInformationFormat=OldStyle"
-  )
+    # this expects a copy of ccache.exe to be in CMAKE_BINARY_DIR renamed to cl.exe
+    set(CMAKE_VS_GLOBALS
+        "CLToolExe=cl.exe"
+         "CLToolPath=${CMAKE_BINARY_DIR}"
+        "TrackFileAccess=false"
+        "UseMultiToolTask=true"
+        "DebugInformationFormat=OldStyle"
+    )
 endif()
 
 
