Web: review updates

--- a/src/qt/applicationbase/CMakeLists.txt
+++ b/src/qt/applicationbase/CMakeLists.txt
@@ -26,9 +26,22 @@ ivw_group("Source Files" ${SOURCE_FILES})
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 qt_wrap_cpp(MOCED_FILES ${MOC_FILES})
 source_group("MOC Files" FILES ${MOCED_FILES})
+source_group("CMake Files" FILES CMakeLists.txt)
 
-add_library(inviwo-qtapplicationbase ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
+add_library(inviwo-qtapplicationbase)
 add_library(inviwo::qtapplicationbase ALIAS inviwo-qtapplicationbase)
+
+target_sources(inviwo-qtapplicationbase
+    PUBLIC
+    FILE_SET HEADERS
+    TYPE HEADERS
+    BASE_DIRS ${IVW_INCLUDE_DIR}
+    FILES
+        ${HEADER_FILES}
+    PRIVATE
+        ${SOURCE_FILES} ${MOCED_FILES} CMakeLists.txt
+)
+
 target_link_libraries(inviwo-qtapplicationbase PUBLIC 
 	inviwo-core
 	Qt6::Core
