--- a/modules/plottinggl/CMakeLists.txt
+++ b/modules/plottinggl/CMakeLists.txt
@@ -1,8 +1,6 @@
-#--------------------------------------------------------------------
 # Inviwo PlottingGL Module
 ivw_module(PlottingGL)
 
-#--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
     include/modules/plottinggl/datavisualizer/pcpdataframevisualizer.h
@@ -29,7 +27,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
     src/datavisualizer/pcpdataframevisualizer.cpp
@@ -55,8 +52,6 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-
-#--------------------------------------------------------------------
 # Add shaders
 set(SHADER_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/isovaluetri.geom
@@ -75,17 +70,14 @@ set(SHADER_FILES
 )
 ivw_group("Shader Files" ${SHADER_FILES})
 
-#--------------------------------------------------------------------
 # Add Unittests
 set(TEST_FILES
     #${CMAKE_CURRENT_SOURCE_DIR}/tests/plottinggl-test.cpp
 )
-ivw_add_unittest(${TEST_FILES})
+#ivw_add_unittest(${TEST_FILES})
 
-#--------------------------------------------------------------------
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
 
-#--------------------------------------------------------------------
 # Add shader directory to pack
 ivw_add_to_module_pack(${CMAKE_CURRENT_SOURCE_DIR}/glsl)
