GHA: see is this vcpkg patch fixes macos link errors in pkgconf.
build/vcpkg_installed/arm64-osx-dynamic/tools/pkgconf/pkgconf links into the vcpkg build dir should use rpath.

--- a/.github/actions/configure-build-env/action.yml
+++ b/.github/actions/configure-build-env/action.yml
@@ -19,6 +19,14 @@ runs:
         ref: ${{ env.VCPKG_SHA }}
         path: vcpkg
 
+    - name: "Patch vcpkg"
+      shell: bash
+      run: |
+        cd vcpkg
+        git config --global user.name 'Inviwo-Team'
+        git config --global user.email 'team@inviwo.org'
+        git apply ../inviwo/tools/vcpkg/39889.patch
+
     - name: "VCPKG Update"
       shell: bash
       run: |
